<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".start.StartFragment">

    <data>
        <import type="com.alesat1215.productsfromerokhin.start.StartTitle"/>
        <variable
            name="viewModel"
            type="com.alesat1215.productsfromerokhin.start.StartViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.title(StartTitle.TITLE) ?? ``}"
                android:textSize="24sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/imgContainer_start"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_start">

                <ImageView
                    android:id="@+id/img_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_description"
                    android:scaleType="fitXY"
                    app:fb_image="@{(viewModel.title(StartTitle.IMG) ?? ``)}"
                    app:srcCompat="@drawable/color_gradient" />

                <TextView
                    android:id="@+id/imgTitle_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@{viewModel.title(StartTitle.IMGTITLE)  ?? ``}"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    tools:text="Image title" />
            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:id="@+id/productsTitleFrame_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgContainer_start">

                <androidx.cardview.widget.CardView
                    android:id="@+id/productsTitleContainer_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/color_gradient">

                        <TextView
                            android:id="@+id/productsTitle_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@{viewModel.title(StartTitle.PRODUCTS)  ?? ``}"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            tools:text="Products title" />
                    </FrameLayout>

                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productsTitleFrame_start"
                tools:listitem="@layout/start_item" />

            <TextView
                android:id="@+id/productsTitle2_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.title(StartTitle.PRODUCTS2)  ?? ``}"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/products_start"
                tools:text="Products title 2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products2_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productsTitle2_start"
                tools:listitem="@layout/start_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>