<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/startFragment"
        android:contentDescription="@string/start"
        android:icon="@drawable/ic_logo_24dp"
        android:title="@string/start" />
    <item
        android:id="@id/menuFragment"
        android:contentDescription="@string/menu"
        android:icon="@drawable/baseline_restaurant_black_24dp"
        android:title="@string/menu" />
    <item
        android:id="@+id/cartFragment"
        android:contentDescription="@string/cart"
        android:icon="@drawable/baseline_shopping_cart_black_24dp"
        android:title="@string/cart" />
    <item
        android:id="@+id/profileFragment"
        android:contentDescription="@string/profile"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/moreFragment"
        android:contentDescription="@string/more"
        android:icon="@drawable/baseline_more_horiz_black_24dp"
        android:title="@string/more" />
</menu>