...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/about_products_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/about_products_item"
            tools:itemCount="3"/>

...

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/about_products_list2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            app:layoutManager="GridLayoutManager"
            app:spanCount="3"
...
